# pure-evm

./: .gitignore  Cargo.toml  README.md  config.yml
.circleci/: config.yml
.circleci/docker/: Dockerfile  Makefile
src/: lib.rs  pure_ext.rs
wasm/: Cargo.toml  Makefile  build.sh  index.js  package.json
wasm/examples/browser/: index.html  index.js  package.json
wasm/examples/node/: index.js  package.json  precompile.js  ttt.js
wasm/src/: lib.rs
