[package]
name = "pure-evm"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]

[dependencies]
evm = { git = "https://github.com/openethereum/openethereum" }
vm = { git = "https://github.com/openethereum/openethereum" }
primitive-types = "0.7.2"
ethereum-types = "0.9.0"
parity-bytes = "0.1"

[dev-dependencies]
hex-literal = "0.1.1"
ethabi = "7.0.0"