[package]
name = "pure-evm"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]

[dependencies]
evm = { git = "https://github.com/openethereum/openethereum" }
vm = { git = "https://github.com/openethereum/openethereum" }
primitive-types = "0.7.2"
ethereum-types = "0.9.2"
parity-bytes = "0.1"
parity-crypto = { version = "0.6.1", features = ["publickey"] }
rust-crypto-wasm = "0.3"

[dev-dependencies]
hex-literal = "0.1.1"
ethabi = "7.0.0"