[package]
name = "pure-evm"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]

[dependencies]
ethereum-types = "0.9.2"
evm = { git = "https://github.com/openethereum/openethereum" }
libsecp256k1 = "^0.2.1"
parity-bytes = "0.1"
primitive-types = "0.7.2"
rust-crypto-wasm = "0.3"
tiny-keccak = "1.4"
vm = { git = "https://github.com/openethereum/openethereum" }

[dev-dependencies]
ethabi = "7.0.0"
hex-literal = "0.1.1"